--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@visactor/react-vchart": "~1.8.8",
     "@visactor/vchart": "~1.8.8",
     "@visactor/vchart-semi-theme": "~1.8.8",
+    "antd": "^5.20.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.11",
     "history": "^5.3.0",
